<resources>
    <string name="app_name">Easyclick</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Easy Service</string>
    <string name="nav_header_subtitle">info@easy.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_location">Easy Click</string>
    <string name="title_activity_list_of_item">ListOfItem</string>
    <string name="Rs">\u20B9 300 </string>
    <string name="title_activity_home_item_category1">HomeItemCategory1</string>
    <string name="title_activity_ven_dor_list">VenDorList</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_category">Easy Click</string>

    <string name="email">Email ID </string>
    <string name="FirstName">First Name<font fgcolor="black">*</font></string>
    <string name="SurName">Surname<font fgcolor="black">*</font></string>

    <string name="Mobileno">Mobile number<font fgcolor="black">*</font></string>

    <string name="Password">Password<font fgcolor="black">*</font></string>
    <string name="confirmPassword">Confirm Password<font fgcolor="black">*</font></string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_forget1">Forgot Password</string>
    <string name="title_activity_singn_up1">Sign Up</string>
    <string name="title_activity_main_new">MainActivityNew</string>
    <string name="title_activity_search_data">Search Data</string>
    <string name="title_activity_change_password1">Change Password</string>
    <string name="title_activity_details1">My Saved Data</string>
</resources>
